--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li>Home</li>
+        <li id="current">Home</li>
         <li>Custom</li>
         <li>Sedan</li>
         <li>SUV</li>
