--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,179 @@
 *:after {
   box-sizing: border-box;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+#top-header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: #0d3b66;
+}
+
+#top-header a{
+  text-decoration: none;
+  color: white;
+}
+
+.siteName{
+  font-family: Verdana, sans-serif;
+  margin: 5px;
+  }
+
+#tools{
+  font-family: 'Arial Narrow Bold', sans-serif;
+  text-align: right;
+  margin: 15px 10px;
+}
+
+#tools a{
+  padding: 2px;
+  border-radius: 6px;
+}
+
+#tools a:hover{
+  color: #0d3b66;
+  background-color: white;
+}
+
+nav{
+  display: block;
+  
+  background-color: #faf0ca;
+  padding: .8rem;
+}
+
+nav ul{
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  text-align: center;
+  padding: 2px;
+}
+
+#current{
+  border-bottom: 3px solid #0d3b66;
+}
+
+nav ul li{
+  margin: 0 12px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  color:#0d3b66;
+  padding: 2px;
+  
+}
+
+nav ul li:hover {
+  color: #faf0ca;
+  background-color: #0d3b66;
+  border-radius: 6px;
+  border-bottom: none;
+}
+
+/*--- BODY ---*/
+h1{
+  font-family: Verdana, sans-serif;
+  margin: 10px;
+}
+
+#banner{
+  position: relative;
+}
+
+#banner img{
+  width: 100%;
+  
+}
+
+#banner div{
+  background-color: rgba(250, 240, 202, .4);
+  color: #0d3b66;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  padding: 5px;
+  width: 40%;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+}
+
+#banner div img {
+  width: 60%;
+  margin: 3px 0;
+}
+
+#delorean{
+  margin-top: 8px;
+  font-family: 'Arial Narrow Bold', sans-serif; 
+}
+
+#reviews{
+  padding: 5px;
+  color: black;
+}
+
+#reviews h2{
+  margin: 15px 0 15px 5px;
+  font-size: 1.2rem;
+}
+
+#reviews li{
+  color: black;
+  font-size: 1rem;
+  padding: 5px 2px;
+  margin-left: 20px;
+}
+
+#upgrades{
+  padding: 5px;
+  margin: 10px 0;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 10px;
+}
+
+#reviews,
+#upgrades {
+  flex: 1;
+  min-width: 0;
+}
+
+#upgrades h2{
+  grid-column: 1/3;
+  margin: 15px 0 15px 5px;
+  font-size: 1.2rem;
+}
+
+figure {
+  margin: 5px 10px;
+  height: auto;
+  text-align: center;
+  border: 2px solid #0d3b66;
+  border-radius: 6px;
+}
+
+figure img{
+  width: 140px;
+  height: 140px;          
+  object-fit: cover;
+  margin-top: 10px;
+}
+
+figcaption a{
+  margin-top: 8px;
+  
+  color: #0d3b66;
+}
+
+/*--- FOOTER ---*/
+footer{
+  margin-left: 10px;
+  font-family: 'Arial Narrow Bold', sans-serif; 
+  background-color: white;
+}
+
+
+
