--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,35 @@
-<h1>Eduardo Peralta</h1>
+<div class="site-wrapper">
+    
+    <h1>Welcome to CSE Motors!</h1>
+    
+    <section id="banner">
+        <img src="/images/vehicles/delorean.jpg" alt="Banner" loading="lazy">
+       
+        <div>
+            <h2>DMC Delorean</h2>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dice!</p>
+            <img src="/images/site/own_today.png" alt="Own Today" loading="lazy">
+        </div>
+    </section>
+    <section id="delorean">
+        <div id="reviews">
+            <h2>DMC Delorean Reviews</h2>
+            <ul>
+                <li>"So fast it´s almost like traveling in time." (4/5)</li>
+                <li>"Coolest ride on the road." (4/5)</li>
+                <li>"I´m feeling McFly!" (5/5) </li>
+                <li>"The most futuristic ride of our day." (4.5/5)</li>
+                <li>"80´s livin and I love it!" (5/5)</li>
+            </ul>
+        </div>
+        <div id="upgrades">
+            <h2>Delorean Upgrades</h2>
+            <figure><img src="/images/upgrades/flux-cap.png" alt="flux cap" loading="lazy"><figcaption><a href="">Flux Capacitor</a></figcaption></figure>
+            <figure><img src="/images/upgrades/flame.jpg" alt="flame" loading="lazy"><figcaption><a href="">Flame Decals</a></figcaption></figure>
+            <figure><img src="/images/upgrades/bumper_sticker.jpg" alt="bumper sticker"><figcaption><a href="">Bumper Stickers</a></figcaption></figure>
+            <figure><img src="/images/upgrades/hub-cap.jpg" alt="hub cap"><figcaption><a href="">Hub Caps</a></figcaption></figure>
+        </div>
+    </section>
+</div>
