--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,7 +23,11 @@
 .siteName{
   font-family: Verdana, sans-serif;
   margin: 5px;
-  }
+ 
+}
+.siteName a h1{
+   background-color: #0d3b66;
+}
 
 #tools{
   font-family: 'Arial Narrow Bold', sans-serif;
@@ -43,7 +47,6 @@
 
 nav{
   display: block;
-  
   background-color: #faf0ca;
   padding: .8rem;
 }
@@ -178,5 +181,44 @@ footer{
   background-color: white;
 }
 
+/*--- INVENTORY-CLASSIFICATION ---*/
+h1{
+  background-color: white;
+}
 
+#inv-display{
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 280px));
+  column-gap: 8px;
+  justify-content: center;  
+  align-content: center; 
+  justify-items: center;     
+  align-items: stretch; 
+}
 
+#inv-display li{
+  list-style-type: none;
+  text-align: center;
+  width: 100%;
+  height: 260px;       
+  overflow: hidden;
+  border: 1px solid black;
+  border-radius: 6px;
+  margin: 10px;
+}
+
+#inv-display img{
+  width: 250px;
+  height: 150px;
+  object-fit: cover;     
+  display: block;
+}
+
+.namePrice h2, .namePrice span{
+  font-family: 'Arial Narrow Bold', sans-serif;;
+}
+
+.namePrice h2 {
+  padding: 15px;
+}
