learning activities week 4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
     
     <h1>Welcome to CSE Motors!</h1>
     
+    <%- messages() %>
+    
     <section id="banner">
         <img src="/images/vehicles/delorean.jpg" alt="Banner" loading="lazy">
        
