--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -274,3 +274,58 @@ hr{
   background-color: white;
   margin-left: 15px;
 }
+
+/*--- FORM ---*/
+form{
+  background-color: white;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  color: white;
+  padding: 2rem;
+}
+
+fieldset{
+  background-color: #0d3b66;
+  border: none;
+  border-radius: 6px;
+  margin: 3rem, 6rem;
+  padding: 1rem;
+  
+}
+
+label{
+  display: block;
+  font-size: 1.1rem;
+  padding: 8px;
+}
+
+input[type= "email"], input[type="text"], input[type="password"]{
+  display: block;
+  background-color: white;
+  border: none;
+  border-radius: 6px;
+  padding: .5rem;
+}
+
+form a{
+  color: white;
+}
+
+input[type="submit"]{
+  padding: .5rem;
+  background-color: white;
+  color: #0d3b66;
+  border-radius: 6px;
+  cursor: pointer;
+  border: none;
+  font-size: .8rem;
+}
+
+.notice{
+  background-color: white;
+  padding: 1rem;
+}
+
+.notice li{
+  margin-left: 15px;
+  font-family: 'Arial Narrow Bold', sans-serif;
+}
