--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -14,9 +14,9 @@
 
 <form action="/account/register" method="post">
     <fieldset>
-        <label>First name: <input type="text" name="account_firstname" required></label>
-        <label>Last name: <input type="text" name="account_lastname" required></label>
-        <label>Email: <input type="email" name="account_email" required></label>
+        <label>First name: <input type="text" name="account_firstname" required value="<%= locals.account_firstname %>"></label>
+        <label>Last name: <input type="text" name="account_lastname" required value="<%= locals.account_lastname %>"></label>
+        <label>Email: <input type="email" name="account_email" required value="<%= locals.account_email %>"></label>
         <label>Password: <input type="password" name="account_password" id="pword" required minlength="12" pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9]).{12,}$"></label>
         <div>
             <span>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</span>
