--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -4,10 +4,10 @@
 
 <%- messages() %>
 
-<% if (errors) { %>
+<% if (errorsInv) { %>
   <ul class="notice">
- <% errors.array().forEach(error => { %>
-   <li><%= error.msg %></li>
+ <% errorsInv.array().forEach(errorI => { %>
+   <li><%= errorI.msg %></li>
 <%  }) %>
  </ul>
 <% } %>
@@ -18,14 +18,14 @@
             Classification
             <%- classificationList %>
         </label>
-        <label>Make <input type="text" name="inv_make" minlength="3" required value="<%= locals.inv_make %>" placeholder="Min of 3 characters"></label>
+        <label>Make <input type="text" name="inv_make" minlength="3" required placeholder="Min of 3 characters" value="<%= locals.inv_make %>"></label>
         <label>Model <input type="text" name="inv_model" minlength="3" required value="<%= locals.inv_model %>" placeholder="Min of 3 characters"></label>
         <label>
             Description 
             <textarea name="inv_description" rows="5" value="<%= locals.inv_description %>"></textarea>
         </label>
-        <label>Image Path <input type="text" name="inv_image" required value="/images/vehicle/no-image.png"></label>
-        <label>Thumbnail Path <input type="text" name="inv_thumbnail" required value="/images/vehicle/no-image.png"></label>
+        <label>Image Path <input type="text" name="inv_image" required value="/images/vehicles/no-image.png"></label>
+        <label>Thumbnail Path <input type="text" name="inv_thumbnail" required value="/images/vehicles/no-image-tn.png"></label>
         <label>Price <input type="number" name="inv_price" min="0" step="any" required value="<%= locals.inv_price %>" placeholder="Decimal or integer"></label>
         <label>Year <input type="number" name="inv_year" min="1000" max="9999" step="1" required value="<%= locals.inv_year %>" placeholder="4-digit year"></label>
         <label>Miles <input type="number" name="inv_miles" min="0" step="1" required value="<%= locals.inv_miles %>" placeholder="Digits only"></label>
