--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -12,26 +12,31 @@
  </ul>
 <% } %>
 
-<form id="addInv" action="/inv/add-inventory" method="post">
+<form id="addInv" id="updateForm" action="/inv/update" method="post">
     <fieldset>
         <label>
             Classification
-            <%- classificationList %>
+            <%- classificationSelect %>
         </label>
         <label>Make <input type="text" name="inv_make" minlength="3" required placeholder="Min of 3 characters" value="<%= locals.inv_make %>"></label>
         <label>Model <input type="text" name="inv_model" minlength="3" required value="<%= locals.inv_model %>" placeholder="Min of 3 characters"></label>
         <label>
             Description 
-            <textarea name="inv_description" rows="5" required> <% if (locals.inv_description) { %> <%= locals.inv_description %> <% } %> </textarea>
+            <textarea name="inv_description" rows="5" value="<%= locals.inv_description %>"></textarea>
         </label>
-        <label>Image Path <input type="text" name="inv_image" required value="/images/vehicles/no-image.png"></label>
-        <label>Thumbnail Path <input type="text" name="inv_thumbnail" required value="/images/vehicles/no-image-tn.png"></label>
+        <label>Image Path <input type="text" name="inv_image" required value="<%= locals.inv_image %>"></label>
+        <label>Thumbnail Path <input type="text" name="inv_thumbnail" required value="<%= locals.inv_thumbnail %>"></label>
         <label>Price <input type="number" name="inv_price" min="0" step="any" required value="<%= locals.inv_price %>" placeholder="Decimal or integer"></label>
         <label>Year <input type="number" name="inv_year" min="1000" max="9999" step="1" required value="<%= locals.inv_year %>" placeholder="4-digit year"></label>
         <label>Miles <input type="number" name="inv_miles" min="0" step="1" required value="<%= locals.inv_miles %>" placeholder="Digits only"></label>
         <label>Color <input type="text" name="inv_color" required value="<%= locals.inv_color %>" ></label>
         <label>
-            <input type="submit" value="Add Vehicle">
+            <input type="submit" disabled value="Update Vehicle">
         </label>
+        <input type="hidden" name="inv_id"
+        <% if(locals.inv_id) { %> value="<%= locals.inv_id %>"
+        <% } %>>
     </fieldset>
 </form>
+
+<script src="../../js/inventory.js"></script>
