--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -8,3 +8,16 @@
     <li><a href="/inv/add-classification">Add new classification</a></li>
     <li><a href="/inv/add-inventory">Add new inventory</a></li>
 </ul>
+
+<div id="manageInv">
+
+  <h2>Manage Inventory</h2>
+  <p>Choose a classification to see those inventory items.</p>
+  <%- classificationSelect %>
+  
+  <table id="inventoryDisplay"></table>
+  
+  <noscript>JavaScript must be enabled to use this page.</noscript>
+  
+  <script src="../../js/inventory.js"></script>
+</div>
