--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -13,9 +13,12 @@
         <div>
             <span>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</span>
         </div>
+        <button type="button" id="pswdBtn">Show Password</button>
         <label>
             <input type="submit" value="LOGIN">
         </label>
         <p>Not account? <a href="/account/register">Sign-up</a></p>
     </fieldset>
 </form>
+
+<script src="/js/script.js"></script>
