--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -21,7 +21,7 @@
         <div>
             <span>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</span>
         </div>
-        <button id="pswdBtn">Show Password</button>
+        <button type="button" id="pswdBtn">Show Password</button>
         <label>
             <input type="submit" value="Register">
         </label>
