--- a/views/account/account-management.ejs
+++ b/views/account/account-management.ejs
@@ -13,6 +13,12 @@
 <% } %>
 
 <div id="accountM">
+  <h2>Welcome <%= accountData.account_firstname %></h2>
+  <p> You're logged in </p>
+  <a href="/account/update/<%=accountData.account_id%>">Edit account information</a>
+  <% if (accountData.account_type === "Employee" || accountData.account_type === "Admin") { %>
+    <h3>Inventory Management</h3>
+    <a href="/inv/">Manage Inventory</a>
+  <% } %>
 
-    <p> You're logged in </p>
 </div>
